# rehome

./: .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: master.yml
docs/: api.rst  conf.py  index.rst
src/rehome/: __init__.py  cli.py  new_home.py
tests/: core_test.py
